touched things up after talking to Wagner, still needs more work

--- a/high-scores.html
+++ b/high-scores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Home - JavaScript Quiz</title>
+	<title>High Scores - JavaScript Quiz</title>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 
@@ -20,19 +20,18 @@
 	<div class="container">
 		<header>
 			<h1 class="text-center mt-3 mb-5">JavaScript Quiz</h1>
-			<h5 class="text-center">Time Remaining: <span id="secondsremaining"></span></h5>
 		</header>
 		<div class="row">
 			<div class="col-sm-8 offset-sm-2 card" style="background:#fff;padding:0px 40px;box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);border-radius: 8px;">
-				<h2 id="quizheading" class="mt-5">JavaScript Quiz</h2>
+				<h2 id="quizheading" class="mt-5">High Scores</h2>
 				<div id="quizcontainer">
-					<p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score and time by ten seconds!</p>
+					<p>Bla bla</p>
 				</div>
-				<ul id="quizquestions">
+				<ul id="highscores">
 				</ul>
 				<div class="d-flex justify-content-around mb-5">
+					<button class="btn btn-primary" style="border-radius: 20px;" id="startquiz" onclick="window.location.href='index.html'">Home</button>
 					<button class="btn btn-primary" style="border-radius: 20px;" id="startquiz" onclick="window.location.href='quiz.html'">Start Quiz</button>
-					<button class="btn btn-secondary" style="border-radius: 20px;" id="copy" onclick="window.location.href='high-scores.html'">View High Scores</button>
 				</div>
 			</div>	
 		</div>
