--- a/bak/index.html
+++ b/bak/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Home - JavaScript Quiz</title>
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<title>JavaScript Quiz</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- JavaScript required for mobile buttons - See JS in https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
 	<script src="assets/js/jquery-3.4.1.slim.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
@@ -17,10 +16,11 @@
 
   </head>
   <body style="background:#f9fbfd;">
+
 	<div class="container">
 		<header>
 			<h1 class="text-center mt-3 mb-5">JavaScript Quiz</h1>
-			<h5 class="text-center">Time Remaining: <span id="secondsremaining"></span></h5>
+				<h5 class="text-center">Time Remaining: <span id="secondsremaining"></span></h5>
 		</header>
 		<div class="row">
 			<div class="col-sm-8 offset-sm-2 card" style="background:#fff;padding:0px 40px;box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);border-radius: 8px;">
@@ -31,8 +31,8 @@
 				<ul id="quizquestions">
 				</ul>
 				<div class="d-flex justify-content-around mb-5">
-					<button class="btn btn-primary" style="border-radius: 20px;" id="startquiz" onclick="window.location.href='quiz.html'">Start Quiz</button>
-					<button class="btn btn-secondary" style="border-radius: 20px;" id="copy" onclick="window.location.href='high-scores.html'">View High Scores</button>
+					<button class="btn btn-primary" style="border-radius: 20px;" id="startquiz"><a href="quiz.html">Start Quiz</a></button>
+					<button class="btn btn-secondary" style="border-radius: 20px;" id="copy" onclick="viewScores()">View High Scores</button>
 				</div>
 			</div>	
 		</div>
